<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_rectangle"
    android:layout_margin="3dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:orientation="horizontal">

        <!-- data -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                style="@style/TextViewDefault"
                android:id="@+id/tvEventMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:text="MAI"/>
            <TextView
                style="@style/TextViewTitle"
                android:id="@+id/tvEventDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                tools:text="11"/>
            <TextView
                style="@style/TextViewDefault"
                android:id="@+id/tvEventYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2021"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?attr/colorOnSecondary"/>

        <!-- title/description -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                style="@style/TextViewTitle"
                android:id="@+id/tvEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Feira de adoção de animais na Redenção"/>
            <TextView
                style="@style/TextViewInfo"
                android:id="@+id/tvEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="6"
                android:ellipsize="end"
                tools:text="O Patas Dadas estará na Redenção, nesse domingo, com cães para adoção e produtos à venda!\n\nNa ocasião, teremos bottons, bloquinhos e camisetas!\n\nTraga seu Pet, os amigos e o chima, e venha aproveitar esse dia de sol com a gente e com alguns de nossos peludinhos - que estarão prontinhos para ganhar o ♥ de um humano bem legal pra chamar de seu. \n\nAceitaremos todos os tipos de doação:\n- guias e coleiras em bom estado\n- ração (as que mais precisamos no momento são sênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validade"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?attr/colorOnSecondary"/>

        <!-- price -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

            <TextView
                style="@style/TextViewTitle"
                android:id="@+id/tvEventPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                tools:text="R$ 29,99"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participants"/>

            <TextView
                style="@style/TextViewTitle"
                android:id="@+id/tvEventParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                tools:text="7"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorOnSurface"
        android:gravity="center"
        android:padding="3dp"
        android:layout_margin="1dp">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_touch"
            app:tint="?attr/colorSurface"
            android:contentDescription="@string/cd_touch_icon" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent"/>
        <TextView
            style="@style/TextViewDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorSurface"
            android:text="@string/click_for_more"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>